Fix overflow css bug

--- a/src/global.scss
+++ b/src/global.scss
@@ -18,7 +18,6 @@
 }
 
 #root {
-  overflow: hidden;
   height: 100%;
 }
 
